--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
   },
   "license": "MIT",
   "dependencies": {
-    "electron-squirrel-startup": "^1.0.0"
+    "dotenv": "^16.4.5",
+    "electron-squirrel-startup": "^1.0.0",
+    "nodemon": "^3.1.0"
   }
 }
