--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint": "echo \"No linting configured\""
   },
   "devDependencies": {
+    "@creativebulma/bulma-divider": "^1.1.0",
     "@electron-forge/cli": "^7.4.0",
     "@electron-forge/maker-deb": "^7.4.0",
     "@electron-forge/maker-rpm": "^7.4.0",
@@ -29,6 +30,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "auto-launch": "^5.0.6",
     "bulma-checkbox": "^1.2.1",
     "bulma-radio": "^1.2.0",
     "bulma-switch-control": "^1.2.2",
