--- a/package.json
+++ b/package.json
@@ -1,41 +1,46 @@
 {
-  "name": "prayerapp",
-  "productName": "prayerapp",
+  "name": "prayer_app",
   "version": "1.0.0",
-  "description": "My Electron application description",
-  "main": "src/index.js",
+  "description": "A simple prayer app for muslims",
+  "main": "src/main.js",
   "scripts": {
-    "start": "electron-forge start",
-    "package": "electron-forge package",
-    "make": "electron-forge make",
-    "publish": "electron-forge publish",
-    "lint": "echo \"No linting configured\""
+    "start": "electron .",
+    "dist": "electron-builder"
   },
-  "devDependencies": {
-    "@creativebulma/bulma-divider": "^1.1.0",
-    "@electron-forge/cli": "^7.4.0",
-    "@electron-forge/maker-deb": "^7.4.0",
-    "@electron-forge/maker-rpm": "^7.4.0",
-    "@electron-forge/maker-squirrel": "^7.4.0",
-    "@electron-forge/maker-zip": "^7.4.0",
-    "@electron-forge/plugin-auto-unpack-natives": "^7.4.0",
-    "@electron-forge/plugin-fuses": "^7.4.0",
-    "@electron/fuses": "^1.8.0",
-    "electron": "30.0.1"
-  },
-  "keywords": [],
-  "author": {
-    "name": "Krenich09",
-    "email": "108550028+Krenich09@users.noreply.github.com"
-  },
+  "author": "Kren1ch",
   "license": "MIT",
   "dependencies": {
-    "auto-launch": "^5.0.6",
-    "bulma-checkbox": "^1.2.1",
-    "bulma-radio": "^1.2.0",
-    "bulma-switch-control": "^1.2.2",
-    "dotenv": "^16.4.5",
-    "electron-squirrel-startup": "^1.0.0",
-    "nodemon": "^3.1.0"
+    "auto-launch": "^5.0.6"
+  },
+  "build": {
+    "appId": "com.kren1ch.app",
+    "productName": "Prayer App",
+    "icon": "./assets/icon.png",
+    "extraResources": [
+      {
+        "from": "assets",
+        "to": "assets"
+      }
+    ],
+    "target": "NSIS",
+    "directories": {
+      "output": "build"
+    },
+    "files": [
+      "src/**/*",
+      "assets/**/*",
+      "package.json"
+    ],
+    "asar": true,
+    "nsis": {
+      "oneClick": false,
+      "allowToChangeInstallationDirectory": true,
+      "createDesktopShortcut": true,
+      "createStartMenuShortcut": true
+    }
+  },
+  "devDependencies": {
+    "electron": "30.0.2",
+    "electron-builder": "^24.13.3"
   }
 }
