--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Kren1ch",
   "license": "MIT",
   "dependencies": {
+    "@treverix/custom-electron-titlebar": "^4.2.0",
     "auto-launch": "^5.0.6",
     "sound-play": "^1.1.0"
   },
