--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@treverix/custom-electron-titlebar": "^4.2.0",
     "auto-launch": "^5.0.6",
+    "electron-log": "^5.1.4",
     "electron-updater": "^6.1.8",
     "sound-play": "^1.1.0"
   },
